<resources>
    <string name="app_name">Hlin</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_password">Add Password</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_note">Add Note</string>
    <string name="bluetoothName">Bluetooth Name:</string>
    <string name="bluetoothConnect">Connect</string>
    <string name="bluetoothDisconnect">Disconnect</string>
    <string name="website">Website:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="date">Date:</string>
    <string name="expired">Expired:</string>
    <string name="lastUsed">Last Used:</string>
    <string name="numberOfUsed">Used times:</string>
    <string name="duplicated">Duplicated:</string>
    <string name="status">Connection Status:</string>
    <string name="bluetoothMac">MAC:</string>
    <string name="addBluetooth">Add Bluetooth</string>
    <string name="deleteBluetooth">Delete Bluetooth</string>
    <string name="ConnectedAlive">Connected - Is Alive</string>
    <string name="ConnectedNotAlive">Did not received is alive</string>
    <string name="search_hint">Hint</string>
    <string name="website_name">Website</string>
    <string name="username_name">Username</string>
    <string name="password_name">Password</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_and_generate_entry">Add and Generate Password</string>
    <string name="check_symbol">Symbols</string>
    <string name="check_numbers">Numbers</string>
    <string name="check_letters">Letters</string>
    <string name="delete_entry_message">Select the entries to be deleted</string>
    <string name="last_time_used">Last Time Used</string>
    <string name="unknown">Unknown</string>
    <string name="connecting">Connecting</string>
    <string name="bluetooth_name_tag">Tag</string>
    <string name="delete_bluetooth_name_message">Are you sure you want to delete this entry?</string>
    <string name="bluetooth_display_name">Display name</string>
    <string name="bluetooth_name">Name</string>
    <string name="bluetooth_mac">Mac</string>
    <string name="bluetooth_created">Created</string>
    <string name="no_connection">No Connection</string>
    <string name="showAddPanel">Show Add Entry</string>
    <string name="showGeneratePanel">Show Generate And Add Entry</string>
    <string name="hideAddPanel">Hide Add Entry</string>
    <string name="hideGeneratePanel">Hide Generate And Add Entry</string>
    <string name="backup">BackUp</string>
    <string name="eye">Eye</string>
    <string name="Discover">Discover</string>
    <string name="passwordLength">Password Length</string>
    <string name="noteTitle">Title</string>
    <string name="noteText">Text</string>
    <string name="noteAddButton">Add note</string>

</resources>
