<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.oroles.hlin.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add_password"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_note"
        android:orderInCategory="100"
        android:title="@string/action_add_note"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/backup"
        app:showAsAction="never"/>
</menu>
